[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["Michael Birkeland <60202353+Birkis@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
